[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "delensalot"
version = "1.0"
authors = [
    "Julien Carron <jcarron@gmail.com>",
    "Sebastian Belkner <sebastianbelkner@gmail.com>",
]
description = "CMB lensing, QE and iterative lensing reconstruction, and delensing on curved-sky"
license = "GPL-2.0"
readme = "README.md"
repository = "https://github.com/NextGenCMB/delensalot"
documentation = "https://github.com/NextGenCMB/delensalot/docs/"
keywords = ["CMB", "Cosmology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7"
requests = "*"
numpy = "*"
pyfftw = "*"
healpy = "*"
logdecorator = "*"
psutil = "*"
ducc0 = "*"

[tool.poetry.scripts]
my-script = "my_package.module:function"
